--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "build": "CI='' parcel build index.html --dist-dir ./dist"
   },
   "author": "Bede Marcos",
   "license": "ISC",
